Fix responsiveness errors, and spacing

--- a/header.css
+++ b/header.css
@@ -38,7 +38,7 @@ header p{
 }
 
 .cta-btns a{
-  background-color: #00A9FF;
+  background-color: #0066ff;
   height: 3.2rem;
   width: 10rem;
   line-height: 3.2rem;
@@ -49,6 +49,16 @@ header p{
 .cta-btns a{
   text-decoration: none;
   color: white;
+
+}
+
+.header-btn:hover{
+  transition: background 0.3s ease;
+  border-radius: 7px;
+}
+
+.header-btn:hover{
+  background-color: #3e59f2;
 }
 
 .try-btn{
@@ -63,7 +73,7 @@ header p{
   width: 100%;
   padding-bottom: calc(4 / 1011 * 100%); 
   margin-top: 2rem;
-  margin-bottom: 48px;
+  margin-bottom: 38px;
   border-radius: 10px;
 }
 
